# ecies_25519

./: .gitignore  LICENSE  README.md
java/: README.md  build.gradle  settings.gradle
java/src/main/java/: module-info.java
java/src/main/java/com/excsn/security/crypto/ecies_25519/: EciesX25519.java
java/src/main/java/com/excsn/security/crypto/hkdf/: Hash.java  Hkdf.java
java/src/main/java/com/google/crypto/tink/subtle/: Curve25519.java  Field25519.java  Random.java  X25519.java
java/src/test/java/com/excsn/security/crypto/ecies_25519/: EciesX25519Test.java
nodejs/: .npmignore  package.json  tsconfig.cjs.json  tsconfig.json  tsconfig.mjs.json
nodejs/scripts/: build.sh
nodejs/src/: index.ts  utils.ts
nodejs/test/: index.ts
rust/: API_REFERENCE.md  Cargo.toml  README.md
rust/src/: backend.rs  lib.rs  parser.rs  types.rs
