[package]
name = "ecies_25519"
description = "Elliptic Curve Integrated Encryption Scheme with X25519 curve"
version = "0.1.4"
edition = "2021"
authors = ["Norm O <normo.pub@gmail.com>"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "^0" }
base64 = "^0"
x25519-dalek = "^2"
digest = { version = "^0" }
hex = "^0"
hkdf = { version = "^0" }
rand = "^0.9.0"
rand_core = "^0"
serde = { version = "^1" }
sha2 = { version = "^0" }
thiserror = "^1"
x25519-parser = "^0"
zeroize = "^1"

[dev-dependencies]
serde_json = "^1.0"
serde_cbor = "^0.11"
rand_chacha = "0.9.0"