[package]
name = "ecies_25519"
description = "Cross-platform Elliptic Curve Integrated Encryption Scheme (ECIES) using X25519, AES-256-GCM, and HKDF-SHA256."
version = "0.2.2"
edition = "2021"
authors = ["Norm O <normo.pub@gmail.com>"]
license = "MPL-2.0"

# Metadata for crates.io
readme = "README.md"
repository = "https://github.com/normano/ecies_25519"
documentation = "https://docs.rs/ecies_25519"
keywords = ["ecies", "x25519", "aes", "gcm", "encryption"]
categories = ["cryptography", "encoding"]

[dependencies]
aes-gcm = { version = "^0" }
base64 = "^0"
curve25519-dalek = "^4"
curve25519-parser = "^0.4"
digest = { version = "^0" }
hex = "^0"
hkdf = { version = "^0" }
pem = "^3"
rand = "^0.9.0"
rand_core = "^0.9.0"
serde = { version = "^1" }
sha2 = { version = "^0" }
thiserror = "^1"
x25519-dalek = "^2.0"
zeroize = "^1"

[dev-dependencies]
ed25519-dalek = "^2.1"
serde_json = "^1.0"
serde_cbor = "^0.11"
rand_chacha = "0.9.0"